--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@tabler/icons-react": "^2.30.0",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
