--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "glob": "^10.4.5",
     "next": "13.4.16",
     "next-bg-image": "^0.1.4",
     "postcss": "8.4.28",
